# rapp

./: Cargo.toml  readme.md
cargo-rapp/: Cargo.toml
cargo-rapp/code_gen/: Cargo.toml  CargoRelativePaths.toml  build.bat  build.sh
cargo-rapp/code_gen/src/: main.rs
cargo-rapp/src/: cli_parser.rs  cmd_init.rs  cmd_show.rs  commands_parser.rs  config.rs  error.rs  lib.rs  main.rs  show.rs  viewer.rs
rapp/: Cargo.toml
rapp/src/: lib.rs  screen.rs
rapp/src/drawables/: mod.rs  placeholder.rs  separator.rs  traits.rs
rapp/src/structures/: mod.rs
rapptool/: Cargo.toml
rapptool/src/: main.rs
runner/: Cargo.toml  _build.rs
runner/src/: lib.rs  main.rs  test.rs
test_app/: Cargo.toml
test_app/src/: lib.rs
