[package]
name = "cargo-rapp"
description = "A cargo tool to facilitate building mobile apps with rapp"
version = "0.0.2"
authors = ["SM"]
edition = "2021"
rust-version = "1.65"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
thiserror = "1.0.16"
anyhow = "1.0.70"

cargo_metadata = "0.15"
scratch = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
