[package]
name = "rapp_runner"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"

[dependencies]
runner = { git = "https://github.com/smassizzo/rapp.git" }
rapp = { git = "https://github.com/smassizzo/rapp.git" }

# the app to show
app = { path = "${dir}/${name}", package = "${name}" }

[workspace]
