[package]
name = "rapp_runner"
version = "0.1.1"
rust-version = "1.65"
edition = "2021"

[dependencies]
runner = { git = "https://github.com/smassizzo/rapp.git" }
rapp = { git = "https://github.com/smassizzo/rapp.git" }

# the user's app
app = { path = "${app_dir}", package = "${name}" }

[workspace]
